2005-08-17  Andy Wingo  <wingo@pobox.com>

	* gst/gst.defs (watch_for_state_change): Added wrapper from CVS.

2005-08-16  Andy Wingo  <wingo@pobox.com>

	* gst/gst.defs (get_pad_template): Change to operate on elements
	and not their classes so it can be wrapped in pygtk 2.6.

	* gst/gstelement.override (_wrap_gst_element_get_pad_template):
	New override.

2005-08-11  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override: (pygst_debug_log):
	Only display the filename and not the full path

2005-08-10  Edward Hervey  <edward@fluendo.com>

	* gst/gstmodule.c: (init_gst): 
	changed debug category name from 'gst-python' to 'python'

	* gst/gst.override: (pygst_debug_log): 
	gchar is way smaller than an int... resulting in negative line numbers
	in debug.

2005-08-10  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override: (pygst_debug_log): 
	printf("urlencoded%20space") != printf("%s", "urlencoded%20space")
	Funny how a lot of problems have gone since that's fixed :)

2005-08-09  Edward Hervey  <edward@fluendo.com>

	* gst/gstpad.override: (_wrap_gst_pad_query_position): 
	Long != LongLong ....

2005-08-08  Edward Hervey  <edward@fluendo.com>

	* codegen/codegen.py:
	* codegen/argtypes.py:
	Updates from pygtk's codegen and typo fix

2005-08-04  Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs:
	* gst/gst.override:
	* gst/gstmodule.c:
	We now have debugging in gst-python ;)
	gst.[log|debug|info|warning|error]()

2005-08-03  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* gst/Makefile.am:
	* gst/gstlibs.override:
	* gst/gst.defs:
	* gst/libs.defs:
	* gst/gst.override:
	* gst/gstlibs.override:
	bindings now wrap the gstreamer extra libs (adapter, controller,...)

2005-08-03  Andy Wingo  <wingo@pobox.com>

	* gst/gstmessage.override (_wrap_gst_message_parse_error): Always
	return a tuple of length 2.

	* examples/pipeline-tester: Commit some updates I had.

	* configure.ac (PYGST_CFLAGS): pygst.py generation is handled by
	the makefile.
